<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@drawable/background_color"
        tools:layout_editor_absoluteY="81dp">

    <Button
            android:text="@string/joinR"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/joinR"
            android:textStyle="normal|bold"
            android:layout_marginBottom="44dp" app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/login"
            app:layout_constraintVertical_bias="1.0"
            android:background="#00B2C3"
            android:textColor="#ffffff"
    />
    <EditText
            android:layout_width="221dp"
            android:layout_height="41dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/Sission_Code"
            android:background="#FFFFFF" android:hint="@string/Session_Code" android:textAlignment="center"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintTop_toBottomOf="@+id/logo"
            android:layout_marginTop="60dp"/>
    <EditText
            android:layout_width="221dp"
            android:layout_height="41dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nickname"
            android:background="#FFFFFF" android:hint="@string/nickname" android:textAlignment="center"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/Sission_Code"
            app:layout_constraintHorizontal_bias="0.497"/>
    <Button
            android:layout_width="221dp"
            android:layout_height="41dp" app:srcCompat="@drawable/rectangle_submit"
            android:id="@+id/join" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/nickname" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:scaleType="fitXY"
            android:background="#00B2C3"
            android:textColor="#ffffff" android:text="@string/join"/>
    <Button
            android:layout_height="50dp" app:srcCompat="@drawable/rectangle_login2"
            android:id="@+id/login"
            android:layout_width="221dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/join" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:scaleType="fitXY"
            app:layout_constraintHorizontal_bias="0.502"
            android:text="@string/login"
            android:background="#00B2C3"
            android:textColor="#ffffff"/>
    <ImageView
            android:layout_width="226dp"
            android:layout_height="156dp" app:srcCompat="@drawable/icon"
            android:id="@+id/logo"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.496"/>
</android.support.constraint.ConstraintLayout>
