<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EndOfGame"
        android:background="@drawable/background_color">


    <TextView
            android:text="@string/welcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/welcome" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:textStyle="bold"
            android:fontFamily="monospace" android:textAlignment="center" android:textSize="30sp"
            android:layout_marginEnd="16dp" android:layout_marginStart="16dp" android:textColor="#FFFF"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/LieToWin"
            android:layout_width="0dp"
            android:id="@+id/LieToWin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace" android:textAlignment="center" android:textSize="24sp"
            android:layout_marginEnd="16dp" android:layout_marginStart="16dp" android:textColor="#FFF"
            android:layout_marginBottom="216dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/EndHome"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:id="@+id/EndHome" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/LieToWin" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:background="@drawable/round_corner_button"
            android:textColor="#00B2C3"
            android:fontFamily="@font/lato_black"
            android:textSize="20dp" app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintVertical_bias="0.246"/>
    <ListView
            android:layout_width="285dp"
            android:layout_height="260dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/players_Score"
            android:textAlignment="center"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="16dp"
            android:verticalScrollbarPosition="defaultPosition"
            app:layout_constraintHorizontal_bias="0.465"
            android:background="@android:color/background_light"
            android:textColor="#009DAF"
            android:fontFamily="@font/lato_black"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/welcome"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/LieToWin"/>


</android.support.constraint.ConstraintLayout>


